tests/2026-09-09_14-43-11/05-firewall-nftables.log
### [Full nftables Ruleset] :: nft list ruleset
--- Executed at 2026-09-09T14:43:11Z ---
# Warning: table ip filter is managed by iptables-nft, do not touch!
table ip filter {
	chain nixos-fw-accept {
		counter packets 2954 bytes 3260345 accept
	}

	chain nixos-fw-refuse {
		counter packets 267 bytes 40915 drop
	}

	chain nixos-fw-log-refuse {
		pkttype != unicast counter packets 237 bytes 39030 jump nixos-fw-refuse
		counter packets 30 bytes 1885 jump nixos-fw-refuse
	}

	chain nixos-fw {
		iifname "lo" counter packets 1010 bytes 123094 jump nixos-fw-accept
		ct state related,established counter packets 1944 bytes 3137251 jump nixos-fw-accept
		ip protocol icmp icmp type echo-request counter packets 0 bytes 0 jump nixos-fw-accept
		counter packets 267 bytes 40915 jump nixos-fw-log-refuse
	}

	chain INPUT {
		type filter hook input priority filter; policy accept;
		counter packets 3221 bytes 3301260 jump nixos-fw
	}
}
# Warning: table ip6 filter is managed by iptables-nft, do not touch!
table ip6 filter {
	chain nixos-fw-accept {
		counter packets 0 bytes 0 accept
	}

	chain nixos-fw-refuse {
		counter packets 0 bytes 0 drop
	}

	chain nixos-fw-log-refuse {
		pkttype != unicast counter packets 0 bytes 0 jump nixos-fw-refuse
		counter packets 0 bytes 0 jump nixos-fw-refuse
	}

	chain nixos-fw {
		iifname "lo" counter packets 0 bytes 0 jump nixos-fw-accept
		ct state related,established counter packets 0 bytes 0 jump nixos-fw-accept
		meta l4proto ipv6-icmp icmpv6 type nd-redirect counter packets 0 bytes 0 drop
		meta l4proto ipv6-icmp xt match "icmp6" counter packets 0 bytes 0 drop
		meta l4proto ipv6-icmp counter packets 0 bytes 0 jump nixos-fw-accept
		ip6 daddr fe80::/64 udp dport 546 counter packets 0 bytes 0 jump nixos-fw-accept
		counter packets 0 bytes 0 jump nixos-fw-log-refuse
	}

	chain INPUT {
		type filter hook input priority filter; policy accept;
		counter packets 0 bytes 0 jump nixos-fw
	}
}
# Warning: table ip mangle is managed by iptables-nft, do not touch!
table ip mangle {
	chain nixos-fw-rpfilter {
		fib saddr . mark oif != 0 counter packets 3221 bytes 3301260 return
		udp sport 67 udp dport 68 counter packets 1 bytes 367 return
		ip saddr 0.0.0.0 ip daddr 255.255.255.255 udp sport 68 udp dport 67 counter packets 0 bytes 0 return
		counter packets 0 bytes 0 drop
	}

	chain PREROUTING {
		type filter hook prerouting priority mangle; policy accept;
		ip protocol udp  counter packets 2051 bytes 1517386 meta mark set ct mark
		counter packets 3222 bytes 3301627 jump nixos-fw-rpfilter
	}

	chain POSTROUTING {
		type filter hook postrouting priority mangle; policy accept;
		ip protocol udp meta mark 0x0000ca6c  counter packets 1685 bytes 183132 ct mark set mark
	}
}
# Warning: table ip6 mangle is managed by iptables-nft, do not touch!
table ip6 mangle {
	chain nixos-fw-rpfilter {
		fib saddr . mark oif != 0 counter packets 0 bytes 0 return
		counter packets 0 bytes 0 drop
	}

	chain PREROUTING {
		type filter hook prerouting priority mangle; policy accept;
		meta l4proto udp  counter packets 0 bytes 0 meta mark set ct mark
		counter packets 0 bytes 0 jump nixos-fw-rpfilter
	}

	chain POSTROUTING {
		type filter hook postrouting priority mangle; policy accept;
		meta l4proto udp meta mark 0x0000ca6c  counter packets 0 bytes 0 ct mark set mark
	}
}
table inet awg_bypass {
	set bypass_v4 {
		type ipv4_addr
		timeout 1h
		elements = { 75.2.60.5 expires 59m59s797ms,
			     99.83.231.61 expires 59m59s800ms,
			     140.82.113.21 expires 57m6s796ms,
			     140.82.113.22 expires 59m41s576ms,
			     140.82.121.3 expires 57m5s650ms,
			     140.82.121.4 expires 58m13s763ms,
			     140.82.121.5 expires 57m6s830ms,
			     185.199.108.133 expires 57m6s62ms,
			     185.199.108.215 expires 57m6s45ms,
			     185.199.109.133 expires 57m6s63ms,
			     185.199.109.215 expires 57m6s43ms,
			     185.199.110.133 expires 57m6s63ms,
			     185.199.110.215 expires 57m6s44ms,
			     185.199.111.133 expires 57m6s64ms,
			     185.199.111.215 expires 57m6s44ms }
	}

	set bypass_v6 {
		type ipv6_addr
		timeout 1h
		elements = { 2606:50c0:8000::154 expires 57m6s48ms,
			     2606:50c0:8000::215 expires 57m6s72ms,
			     2606:50c0:8001::154 expires 57m6s48ms,
			     2606:50c0:8001::215 expires 57m6s69ms,
			     2606:50c0:8002::154 expires 57m6s46ms,
			     2606:50c0:8002::215 expires 57m6s71ms,
			     2606:50c0:8003::154 expires 57m6s47ms,
			     2606:50c0:8003::215 expires 57m6s70ms }
	}

	chain output {
		type route hook output priority mangle; policy accept;
		ip daddr { 1.0.0.1, 1.1.1.1 } meta mark set 0x0000ca6c
		ip daddr @bypass_v4 meta mark set 0x0000ca6c
		ip6 daddr @bypass_v6 meta mark set 0x0000ca6c
	}

	chain postrouting {
		type nat hook postrouting priority srcnat; policy accept;
		meta mark 0x0000ca6c masquerade
	}
}
# Warning: table ip raw is managed by iptables-nft, do not touch!
table ip raw {
	chain PREROUTING {
		type filter hook prerouting priority raw; policy accept;
		ip daddr 10.8.1.11 iifname != "awg0" fib saddr type != local  counter packets 0 bytes 0 drop
	}
}


### [Table inet awg_bypass] :: nft list table inet awg_bypass
--- Executed at 2026-09-09T14:43:11Z ---
table inet awg_bypass {
	set bypass_v4 {
		type ipv4_addr
		timeout 1h
		elements = { 75.2.60.5 expires 59m59s767ms,
			     99.83.231.61 expires 59m59s770ms,
			     140.82.113.21 expires 57m6s766ms,
			     140.82.113.22 expires 59m41s546ms,
			     140.82.121.3 expires 57m5s620ms,
			     140.82.121.4 expires 58m13s733ms,
			     140.82.121.5 expires 57m6s800ms,
			     185.199.108.133 expires 57m6s32ms,
			     185.199.108.215 expires 57m6s15ms,
			     185.199.109.133 expires 57m6s33ms,
			     185.199.109.215 expires 57m6s13ms,
			     185.199.110.133 expires 57m6s33ms,
			     185.199.110.215 expires 57m6s14ms,
			     185.199.111.133 expires 57m6s34ms,
			     185.199.111.215 expires 57m6s14ms }
	}

	set bypass_v6 {
		type ipv6_addr
		timeout 1h
		elements = { 2606:50c0:8000::154 expires 57m6s18ms,
			     2606:50c0:8000::215 expires 57m6s42ms,
			     2606:50c0:8001::154 expires 57m6s18ms,
			     2606:50c0:8001::215 expires 57m6s39ms,
			     2606:50c0:8002::154 expires 57m6s16ms,
			     2606:50c0:8002::215 expires 57m6s41ms,
			     2606:50c0:8003::154 expires 57m6s17ms,
			     2606:50c0:8003::215 expires 57m6s40ms }
	}

	chain output {
		type route hook output priority mangle; policy accept;
		ip daddr { 1.0.0.1, 1.1.1.1 } meta mark set 0x0000ca6c
		ip daddr @bypass_v4 meta mark set 0x0000ca6c
		ip6 daddr @bypass_v6 meta mark set 0x0000ca6c
	}

	chain postrouting {
		type nat hook postrouting priority srcnat; policy accept;
		meta mark 0x0000ca6c masquerade
	}
}


### [Set inet awg_bypass bypass_v4] :: nft list set inet awg_bypass bypass_v4
--- Executed at 2026-09-09T14:43:11Z ---
table inet awg_bypass {
	set bypass_v4 {
		type ipv4_addr
		timeout 1h
		elements = { 75.2.60.5 expires 59m59s761ms,
			     99.83.231.61 expires 59m59s764ms,
			     140.82.113.21 expires 57m6s760ms,
			     140.82.113.22 expires 59m41s540ms,
			     140.82.121.3 expires 57m5s614ms,
			     140.82.121.4 expires 58m13s727ms,
			     140.82.121.5 expires 57m6s794ms,
			     185.199.108.133 expires 57m6s26ms,
			     185.199.108.215 expires 57m6s9ms,
			     185.199.109.133 expires 57m6s27ms,
			     185.199.109.215 expires 57m6s7ms,
			     185.199.110.133 expires 57m6s27ms,
			     185.199.110.215 expires 57m6s8ms,
			     185.199.111.133 expires 57m6s28ms,
			     185.199.111.215 expires 57m6s8ms }
	}
}


### [Set inet awg_bypass bypass_v6] :: nft list set inet awg_bypass bypass_v6
--- Executed at 2026-09-09T14:43:11Z ---
table inet awg_bypass {
	set bypass_v6 {
		type ipv6_addr
		timeout 1h
		elements = { 2606:50c0:8000::154 expires 57m5s999ms,
			     2606:50c0:8000::215 expires 57m6s23ms,
			     2606:50c0:8001::154 expires 57m5s999ms,
			     2606:50c0:8001::215 expires 57m6s20ms,
			     2606:50c0:8002::154 expires 57m5s997ms,
			     2606:50c0:8002::215 expires 57m6s22ms,
			     2606:50c0:8003::154 expires 57m5s998ms,
			     2606:50c0:8003::215 expires 57m6s21ms }
	}
}


### [iptables Filter Rules] :: iptables -S
--- Executed at 2026-09-09T14:43:12Z ---
-P INPUT ACCEPT
-P FORWARD ACCEPT
-P OUTPUT ACCEPT
-N nixos-fw
-N nixos-fw-accept
-N nixos-fw-log-refuse
-N nixos-fw-refuse
-A INPUT -j nixos-fw
-A nixos-fw -i lo -j nixos-fw-accept
-A nixos-fw -m conntrack --ctstate RELATED,ESTABLISHED -j nixos-fw-accept
-A nixos-fw -p icmp -m icmp --icmp-type 8 -j nixos-fw-accept
-A nixos-fw -j nixos-fw-log-refuse
-A nixos-fw-accept -j ACCEPT
-A nixos-fw-log-refuse -m pkttype ! --pkt-type unicast -j nixos-fw-refuse
-A nixos-fw-log-refuse -j nixos-fw-refuse
-A nixos-fw-refuse -j DROP


### [iptables NAT Rules] :: iptables -t nat -S
--- Executed at 2026-09-09T14:43:12Z ---
-P PREROUTING ACCEPT
-P INPUT ACCEPT
-P OUTPUT ACCEPT
-P POSTROUTING ACCEPT


### [iptables Mangle Rules] :: iptables -t mangle -S
--- Executed at 2026-09-09T14:43:12Z ---
-P PREROUTING ACCEPT
-P INPUT ACCEPT
-P FORWARD ACCEPT
-P OUTPUT ACCEPT
-P POSTROUTING ACCEPT
-N nixos-fw-rpfilter
-A PREROUTING -p udp -m comment --comment "awg-quick(8) rule for awg0" -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A PREROUTING -j nixos-fw-rpfilter
-A POSTROUTING -p udp -m mark --mark 0xca6c -m comment --comment "awg-quick(8) rule for awg0" -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A nixos-fw-rpfilter -m rpfilter --loose --validmark -j RETURN
-A nixos-fw-rpfilter -p udp -m udp --sport 67 --dport 68 -j RETURN
-A nixos-fw-rpfilter -s 0.0.0.0/32 -d 255.255.255.255/32 -p udp -m udp --sport 68 --dport 67 -j RETURN
-A nixos-fw-rpfilter -j DROP
